--- a/src/styles/auth_style.css
+++ b/src/styles/auth_style.css
@@ -3,6 +3,12 @@
 	justify-content: space-between;
 }
 
+.auth_nav_links {
+	display: flex;
+	justify-content: center;
+	align-self: center;
+}
+
 .auth_container {
 	display: flex;
 	justify-content: center;
