--- a/styles/account_style.css
+++ b/styles/account_style.css
@@ -13,7 +13,20 @@ body {
 
 button {
 	cursor: pointer;
+	height: 3rem;
+	width: 7rem;
+	background-color: transparent;
+	border: 3px solid #e40000;
+	border-radius: 0.25rem;
+	color: #e40000;
+	font-size: 1rem;
+	font-weight: 700;
 	transition: 0.25s;
+}
+
+button:hover {
+	background-color: #e40000;
+	color: #ffffff;
 }
 
 /* Navigation Styling */
@@ -40,7 +53,6 @@ nav {
 	width: 3rem;
 	justify-items: center;
 	background-color: transparent;
-	transition: 0.25s;
 	border: transparent;
 	border-radius: 2rem;
 }
@@ -53,37 +65,12 @@ nav {
 	background-color: #dbf1ff;
 }
 
-.auth_container {
+/* Main styling */
+.content_container {
 	display: flex;
-	justify-content: center;
-}
-
-.auth_box {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
 	align-items: center;
-	width: 25rem;
-	height: 25rem;
-}
-
-.welcome_text {
-	display: flex;
-	flex-direction: column;
 	justify-content: center;
-	align-items: center;
-}
-
-.email {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-}
-
-.password {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-grow: 1;
 }
 
 /* Footer styling */
@@ -94,4 +81,5 @@ footer {
 	padding: 10px;
 	position: relative;
 	bottom: 0;
+	width: 100%;
 }
