Added styling to the roputes element

--- a/styles/dashboard_style.css
+++ b/styles/dashboard_style.css
@@ -149,6 +149,15 @@ nav {
 	background-color: transparent;
 }
 
+.monaco_editor {
+	width: 100%;
+	margin: 0.5rem;
+}
+
+.routes {
+	height: 15rem;
+}
+
 /* Footer styling */
 footer {
 	background-color: #333;
