--- a/styles/models_style.css
+++ b/styles/models_style.css
@@ -100,8 +100,6 @@ nav {
 	margin: 0.5rem;
 }
 
-/* Dynamic Styling */
-
 /* Footer styling */
 footer {
 	background-color: #333;
@@ -111,4 +109,34 @@ footer {
 	position: relative;
 	bottom: 0;
 	width: 100%;
+}
+
+/* Mobile Styles */
+@media screen and (max-width: 768px) {
+	.content_container {
+		flex-direction: column;
+	}
+
+	.side_nav {
+		flex-direction: row;
+		justify-content: center;
+		margin: 0.25rem;
+		margin-top: 0.5rem;
+		padding: 0.25rem;
+		overflow-x: auto;
+	}
+
+	.side_nav button {
+		margin: 0 0.25rem;
+	}
+
+	.content_box {
+		margin: 0.25rem;
+		padding: 0.5rem;
+	}
+
+	table {
+		margin-left: 0;
+		font-size: 0.9rem;
+	}
 }
