--- a/styles/account_style.css
+++ b/styles/account_style.css
@@ -1,123 +1,55 @@
 /* Global styling */
 html,
 body {
-	font-family: "Courier New", Courier, monospace;
-	margin: 0;
+    font-family: 'Courier New', Courier, monospace;
+    margin: 0;
 }
 
 body {
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
-}
-
-button {
-	cursor: pointer;
-	height: 3rem;
-	width: 7rem;
-	background-color: transparent;
-	border: 3px solid #e40000;
-	border-radius: 0.25rem;
-	color: #e40000;
-	font-size: 1rem;
-	font-weight: 700;
-	transition: 0.25s;
-}
-
-button:hover {
-	background-color: #e40000;
-	color: #ffffff;
-}
-
-/* Navigation Styling */
-nav {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-
-.title {
-	margin: 1rem;
-}
-
-.nav_links {
-	display: flex;
-	margin: 0.5rem;
-}
-
-.nav_links button {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 3rem;
-	width: 3rem;
-	justify-items: center;
-	background-color: transparent;
-	border: transparent;
-	border-radius: 2rem;
-}
-
-.nav_links button:hover {
-	background-color: #dbf1ff;
-}
-
-.nav_links a:hover {
-	background-color: #dbf1ff;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 /* Main styling */
-.content_container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-grow: 1;
+.account-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
 }
 
-.account_box {
-	display: flex;
-	flex-direction: column;
+.account-box {
+    display: flex;
+    flex-direction: column;
 }
 
 .signout_button {
-	margin: auto;
+    margin: auto;
+    cursor: pointer;
+    height: 3rem;
+    width: 7rem;
+    background-color: transparent;
+    border: 3px solid #e40000;
+    border-radius: 0.25rem;
+    color: #e40000;
+    font-size: 1rem;
+    font-weight: 700;
+    transition: 0.5s;
+}
+
+.signout_button:hover {
+    background-color: #e40000;
+    color: #ffffff;
+    border: transparent;
 }
 
 /* Footer styling */
 footer {
-	background-color: #333;
-	color: white;
-	text-align: center;
-	padding: 10px;
-	position: relative;
-	bottom: 0;
-}
-
-/* Mobile Styles */
-@media screen and (max-width: 768px) {
-	.content_container {
-		flex-direction: column;
-	}
-
-	.side_nav {
-		flex-direction: row;
-		justify-content: center;
-		margin: 0.25rem;
-		margin-top: 0.5rem;
-		padding: 0.25rem;
-		overflow-x: auto;
-	}
-
-	.side_nav button {
-		margin: 0 0.25rem;
-	}
-
-	.content_box {
-		margin: 0.25rem;
-		padding: 0.5rem;
-	}
-
-	table {
-		margin-left: 0;
-		font-size: 0.9rem;
-	}
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    position: relative;
+    bottom: 0;
 }
