--- a/styles/auth_style.css
+++ b/styles/auth_style.css
@@ -1,10 +1,3 @@
-/* Global styling */
-
-button {
-    cursor: pointer;
-    transition: 0.25s;
-}
-
 h1 {
     color: #ffd700;
 }
@@ -13,6 +6,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
 .auth_box {
@@ -40,6 +34,18 @@ h1 {
     flex-direction: column;
     justify-content: center;
     margin-bottom: 0.5rem;
+}
+
+.signin-box {
+    height: 2rem;
+    background-color: #1a1a1a;
+    color: #fff;
+    border: 1px solid #333;
+    border-radius: 4px;
+    outline: none;
+    margin: 0.25rem;
+    width: 300px;
+    padding-left: 8px;
 }
 
 .email label {
@@ -70,9 +76,10 @@ h1 {
     border: 1px solid #ffd700;
     border-radius: 0.25rem;
     font-weight: 800;
+    cursor: pointer;
+    transition: 0.25s;
 }
 
-/* Footer styling */
 footer {
     background-color: #333;
     color: white;
@@ -80,40 +87,4 @@ footer {
     padding: 10px;
     position: relative;
     bottom: 0;
-}
-
-/* Mobile Styles */
-@media screen and (max-width: 768px) {
-    .content_container {
-        flex-direction: column;
-    }
-
-    .side_nav {
-        flex-direction: row;
-        justify-content: center;
-        margin: 0.25rem;
-        margin-top: 0.5rem;
-        padding: 0.25rem;
-        overflow-x: auto;
-    }
-
-    .side_nav button {
-        margin: 0 0.25rem;
-    }
-
-    .content_box {
-        margin: 0.25rem;
-        padding: 0.5rem;
-    }
-
-    .monaco_editor {
-        width: auto;
-        height: 100%;
-        margin: 0.5rem;
-    }
-
-    table {
-        margin-left: 0;
-        font-size: 0.9rem;
-    }
 }
