--- a/styles/auth_style.css
+++ b/styles/auth_style.css
@@ -6,6 +6,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 100vh;
 }
 
