--- a/styles/dashboard_style.css
+++ b/styles/dashboard_style.css
@@ -1,3 +1,9 @@
+#root {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
 body {
     font-family: 'JetBrains Mono', 'Courier New', monospace;
     margin: 0;
@@ -17,6 +23,10 @@ nav {
     align-items: center;
     background-color: #252525;
     border-bottom: 1px solid #333;
+}
+
+form {
+    display: flex;
 }
 
 .title {
@@ -51,6 +61,7 @@ nav {
 .content-container {
     display: flex;
     background-color: #1a1a1a;
+    flex-grow: 1;
 }
 
 .method {
@@ -76,8 +87,8 @@ nav {
     border: 1px solid #333;
     border-radius: 4px;
     outline: none;
+    width: 40%;
     margin: 0.25rem;
-    width: 45%;
     padding-left: 8px;
 }
 
@@ -111,6 +122,8 @@ nav {
     border: 2px solid #ffd700;
     border-radius: 0.25rem;
     font-weight: 600;
+    font-size: 20px;
+    text-align: center;
 }
 
 .content-box-button:hover {
@@ -121,7 +134,7 @@ nav {
 
 .request-body textarea {
     width: 400px;
-    height: 150px;
+    height: 300px;
     background-color: #1a1a1a;
     color: #fff;
     border: 1px solid #333;
@@ -134,7 +147,7 @@ nav {
 .request-body textarea:focus {
     border: 1px solid #ffd700;
 }
-
+/* 
 .authentication select {
     padding: 0.5rem;
     border: 1px solid #333;
@@ -165,7 +178,7 @@ nav {
 
 .auth-inputs input:focus {
     border: 1px solid #ffd700;
-}
+} */
 
 .custom-button {
     height: 2rem;
@@ -242,8 +255,12 @@ nav {
 
 .cell {
     padding-left: 0.5rem;
-    width: 6rem;
+    min-width: 6rem;
     background-color: transparent;
+}
+
+.cell p {
+    width: 20rem;
 }
 
 .row-method {
@@ -298,11 +315,13 @@ nav {
 }
 
 .request-explorer-body {
+    height: 100%;
     overflow-y: auto;
 }
 
 .explorer-buttons {
     margin-left: 8rem;
+    margin-right: 4rem;
     display: flex;
     align-items: center;
 }
@@ -329,9 +348,16 @@ nav {
 }
 
 .code-placeholder {
-    height: 350px;
+    height: 74%;
     overflow-y: auto;
     font-size: large;
+    background-color: #1a1a1a;
+    padding: 1rem;
+    border-radius: 4px;
+    border: '1px solid #333';
+    overflow-x: auto;
+    margin-left: 8rem;
+    margin-right: 4rem;
 }
 
 footer {
@@ -339,9 +365,8 @@ footer {
     color: #888;
     text-align: center;
     padding: 2px;
-    position: relative;
-    bottom: 0;
     border-top: 1px solid #333;
+    flex-shrink: 0;
 }
 
 @media screen and (max-width: 768px) {
