Added color switch for status codes default is white. TODO: make request/response boxes dynamically display data. Make the test rows rerender when you click the save button. Write a very basic idea of what you wnat the database schema to look like.

--- a/styles/dashboard_style.css
+++ b/styles/dashboard_style.css
@@ -276,7 +276,7 @@ form {
 
 .response-code {
     background-color: #ffd700;
-    color: #1a1a1a;
+    color: #000000;
     border-radius: 0.25rem;
     padding: 0.5rem;
     border-radius: 4px;
