--- a/styles/dashboard_style.css
+++ b/styles/dashboard_style.css
@@ -64,6 +64,12 @@ form {
     flex-grow: 1;
 }
 
+.input_row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .method {
     margin-bottom: 0.5rem;
 }
